trying to fix left align on comments

--- a/yb_bits/static/css/yb_bits/yb_bits.css
+++ b/yb_bits/static/css/yb_bits/yb_bits.css
@@ -351,7 +351,7 @@
 .yb-comment-shell {
     position: relative;
     display: inline-block;
-    text-align: left;
+    text-align: left !important;
     width: 100%;
     margin-top: 4px;
     margin-bottom: 4px;
@@ -495,9 +495,6 @@
     filter: drop-shadow(0px 0px 1px rgba(0, 0, 0, 0.5));
 }
 
-.comment-body {
-    text-align: left !important;
-}
 
 .yb-comment-photo.right {
     position: absolute;
